[gd_scene load_steps=28 format=2]

[ext_resource path="res://Entities/trooper/trooper.gd" type="Script" id=1]
[ext_resource path="res://Components/stats/stats.tscn" type="PackedScene" id=2]
[ext_resource path="res://Components/sprite/entity_sprite.tscn" type="PackedScene" id=3]
[ext_resource path="res://Components/entity_push/entity_push.tscn" type="PackedScene" id=4]
[ext_resource path="res://Components/hurtbox/hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Components/sleeper/sleeper.tscn" type="PackedScene" id=6]
[ext_resource path="res://Components/health_bar/health_bar.tscn" type="PackedScene" id=7]
[ext_resource path="res://Components/brain/movement_lobe/movement_lobe.tscn" type="PackedScene" id=8]
[ext_resource path="res://Components/brain/brain.tscn" type="PackedScene" id=9]
[ext_resource path="res://Components/brain/action_lobe/action/action.tscn" type="PackedScene" id=10]
[ext_resource path="res://Entities/trooper/trooper.png" type="Texture" id=11]
[ext_resource path="res://Components/brain/action_lobe/action_lobe.tscn" type="PackedScene" id=12]
[ext_resource path="res://Components/sound_player/foot_stepper/foot_stepper.tscn" type="PackedScene" id=13]
[ext_resource path="res://Effects/entity_effects/entity_effects.tscn" type="PackedScene" id=14]
[ext_resource path="res://Components/held_item/held_item.tscn" type="PackedScene" id=15]
[ext_resource path="res://Entities/Item_Pickups/blaster/blaster.png" type="Texture" id=16]
[ext_resource path="res://Effects/energy_burst/energy_burst.tscn" type="PackedScene" id=17]
[ext_resource path="res://Components/spawner/spawner.tscn" type="PackedScene" id=18]
[ext_resource path="res://Components/brain/movement_lobe/spring/spring.tscn" type="PackedScene" id=19]
[ext_resource path="res://Entities/trooper/trooper_back.png" type="Texture" id=20]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true

[sub_resource type="CapsuleShape2D" id=9]
radius = 4.62944
height = 7.48858

[sub_resource type="CapsuleShape2D" id=8]
radius = 3.50571
height = 1.38178

[sub_resource type="CapsuleShape2D" id=7]
radius = 4.15065
height = 5.16497

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("entity_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=4]
resource_name = "stand"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("entity_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "walk"
length = 0.668
loop = true
step = 0.167
tracks/0/type = "value"
tracks/0/path = NodePath("entity_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.167, 0.334, 0.501 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4 ]
}

[node name="trooper" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )
truName = "trooper"
faction = "colonist"
warnings = 1

[node name="stats" parent="." instance=ExtResource( 2 )]
MAX_HEALTH = 5
HEALTH = 5
DEFENCE = 3

[node name="entity_sprite" parent="." instance=ExtResource( 3 )]
material = SubResource( 1 )
texture = ExtResource( 11 )
hframes = 5
frame = 1
auto_flip_mode = 2
back_texture = ExtResource( 20 )

[node name="entity_push" parent="." instance=ExtResource( 4 )]
visible = false

[node name="CollisionShape2D" parent="entity_push" index="0"]
shape = SubResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.5, 4.5 )
shape = SubResource( 8 )

[node name="hurtbox" parent="." instance=ExtResource( 5 )]
visible = false

[node name="CollisionShape2D" parent="hurtbox" index="0"]
shape = SubResource( 7 )

[node name="sleeper" parent="." instance=ExtResource( 6 )]
visible = false

[node name="health_bar" parent="." instance=ExtResource( 7 )]
margin_left = -10.8595
margin_top = -12.9784
margin_right = 11.1405
margin_bottom = -8.97668

[node name="brain" parent="." instance=ExtResource( 9 )]

[node name="movement_lobe" parent="brain" instance=ExtResource( 8 )]
general_springs = {
"friendly": "",
"hostile": "spring",
"neutral": ""
}

[node name="spring" parent="brain/movement_lobe" instance=ExtResource( 19 )]
DISTANCE = 16
FARZONE = 50
USE_FARZONE = true

[node name="action_lobe" parent="brain" instance=ExtResource( 12 )]
PATIENCE = 0.0

[node name="shoot" parent="brain/action_lobe" instance=ExtResource( 10 )]
best_distance = 80
COOLDOWN = 0.5

[node name="melee" parent="brain/action_lobe" instance=ExtResource( 10 )]
best_distance = 16
default_score = 0.0
COOLDOWN = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/stand = SubResource( 4 )
anims/walk = SubResource( 5 )

[node name="foot_stepper" parent="." instance=ExtResource( 13 )]

[node name="entity_effects" parent="." instance=ExtResource( 14 )]

[node name="held_item" parent="." instance=ExtResource( 15 )]
TARGETING = 1

[node name="sprite" parent="held_item/anchor" index="0"]
texture = ExtResource( 16 )
hframes = 1

[node name="cooldown" type="Timer" parent="."]
wait_time = 0.14

[node name="muzzle_flash" parent="." instance=ExtResource( 18 )]
standby_mode = true
thing = ExtResource( 17 )
spawn_on_free = false
rotation_mode = 2
effect_inherit_flipping = false

[connection signal="lost_target" from="brain" to="." method="_on_brain_lost_target"]
[connection signal="action" from="brain/action_lobe" to="." method="_on_action_lobe_action"]
[connection signal="animation_finished" from="held_item/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="cooldown" to="." method="_on_cooldown_timeout"]

[editable path="entity_push"]
[editable path="hurtbox"]
[editable path="held_item"]
